[package]
name = "ws-tool"
version = "0.1.2"
edition = "2024"

[dependencies]
chardetng = "0.1.17"
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
comfy-table = "7.2.1"
crossterm = "0.29.0"
dialoguer = "0.12.0"
encoding_rs = "0.8.35"
fs_extra = "1.3.0"
ignore = "0.4.25"
indicatif = "0.18.3"
regex = "1.12.2"
roxmltree = "0.21.1"
unicode-width = "0.2.2"
urlencoding = "2.1.3"
windows-sys = {version = "0.61.2", features = [
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_UI_Shell",
]}

[profile.release]
strip = true  # 自动剥离符号信息，减小体积
lto = true    # 开启链接时优化，进一步减小体积并提升速度

[package.metadata.packager]
name = "my-app"
product-name = "My App"
icons = ["icons/icon.png"]
formats = ["wix"]

# [package.metadata.packager.wix]
# template = ".cargo/main.wxs"
